[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/tempenemy.png" type="Texture" id=1]
[ext_resource path="res://scripts/Trooper.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 33, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 256.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 1 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.734848, 1 )
colors = PoolColorArray( 0.0509804, 0.737255, 0.741176, 1, 0.475163, 0.854694, 0.856863, 0.55303, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 1
emission_sphere_radius = 50.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -100.0
scale = 5.0
color_ramp = SubResource( 6 )

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Lava Detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Lava Detection"]
position = Vector2( 0, 40 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]

[node name="Area2D2" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 0, 24 )
shape = SubResource( 4 )

[node name="RayCast2D" type="RayCast2D" parent="."]

[node name="ChargeUp" type="Particles2D" parent="RayCast2D"]
emitting = false
amount = 50
lifetime = 0.75
one_shot = true
visibility_rect = Rect2( -50.7093, -50.8302, 100.839, 101.74 )
process_material = SubResource( 7 )

[node name="Beam" type="Line2D" parent="RayCast2D"]
visible = false
position = Vector2( -2.91667, 0 )
scale = Vector2( 0.608333, 1 )
points = PoolVector2Array( 0, 0, 100, 0 )
default_color = Color( 0.0509804, 0.737255, 0.741176, 1 )
texture_mode = 2
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 8.0
antialiased = true

[node name="Tween" type="Tween" parent="RayCast2D"]

[connection signal="area_entered" from="Lava Detection" to="." method="_on_Lava_Detection_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
